Fix button alignment

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -22,6 +22,8 @@
   font-weight: 500;
   font-family: var(--font-stack);
   letter-spacing: 0.05em;
+  text-align: left;
+  padding-left: 30px;
 }
 
 .nav button:hover {
